Bug 116208 - Zoom factor, word counter etc. do not update in status bar (with OpenGL)
Summary: Zoom factor, word counter etc. do not update in status bar (with OpenGL)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.3.1 rc
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.0.1 target:6.0.6
Keywords: bibisected, bisected, regression
: 116304 116946 116955 116972 117130 117197 117306 117520 117530 117550 117765 117832 117837 117874 117956 117960 118044 118046 118060 118201 118257 118334 118497 118560 (view as bug list)
Depends on:
Blocks: Statusbar VCL-OpenGL
  Show dependency treegraph
 
Reported: 2018-03-05 15:44 UTC by Jean-Baptiste Faure
Modified: 2018-07-08 22:47 UTC (History)
33 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2018-03-05 15:44:37 UTC
Description:
When changing the zoom factor from the status bar, the zoom factor value does not reflect this change.


Steps to Reproduce:
1. Right click on the zoom factor in the status bar
2. choose optimal
3. change the size of the window

Actual Results:  
The zoom factor does not change to reflect its new value

Expected Results:
The zoom factor shows the new value due to window geometry change


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Second scenario to reproduce the bug:
1/ open an existing document in Writer
2/ right click on the zoom factor and choose a value slightly different from the current one

The view change but the zoom factor value does not change

Version: 6.1.0.0.alpha0+
Build ID: 73312eaff10b19d1286c225ee335451e1800df4a
Threads CPU : 4; OS : Linux 4.4; UI Render : GL; VCL: gtk3; 
Ubuntu_16.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Calc: 

I do not see the bug if I disable OpenGL. In LO 6.0.3.0+ I do not see the bug, OpenGL being disabled or not. 

Best regards. JBF


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 Xisco Faulí 2018-03-05 16:50:54 UTC
I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: 2affed9bfd72628549df3049ed9f6e6a30fdb5b8
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 raal 2018-03-05 16:56:00 UTC
no repro Version: 6.1.0.0.alpha0+
Build ID: 77db2da61658906c354084b13a95f1102949fbd0
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3;
Comment 3 Telesto 2018-03-11 18:30:56 UTC
*** Bug 116304 has been marked as a duplicate of this bug. ***
Comment 4 Telesto 2018-03-11 18:32:48 UTC
Repro on Windows
Version: 6.1.0.0.alpha0+
Build ID: 5a341e126709e3c9ef01680e116d5ce0d55d9f8c
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-03-10_23:12:15
Locale: nl-NL (nl_NL); Calc: CL
Comment 5 Xisco Faulí 2018-03-12 15:31:35 UTC
> I do not see the bug if I disable OpenGL. In LO 6.0.3.0+ I do not see the
> bug, OpenGL being disabled or not. 

Adding regression keyword
Comment 6 Aron Budea 2018-03-14 23:29:11 UTC
Bibisected to the commit referenced below using repo bibisect-win32-6.1 with OpenGL enabled. Adding Cc: to Tamas Bunth, please take a look sometimes.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a4ed3d9a1ffa1b51ba4352a955c950235f099fdc
author		Tamas Bunth <tamas.bunth@collabora.co.uk>	2018-03-01 15:32:18 +0100
committer	Tamás Bunth <btomi96@gmail.com>	2018-03-01 15:34:37 +0100

tdf#115353 Status bar: no cache in settext
Comment 7 Stefan_Lange_KA@T-Online.de 2018-03-22 07:41:38 UTC
I have reproduced the bug in

Version: 6.0.4.0.0+ (x64)
Build ID: deb5db7bf6d45338c9b6f6f4a1d62fba168b7a85
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-0, Time: 2018-03-22_03:08:26
Locale: de-DE (de_DE); Calc: CL

when OpenGL is enabled, but not, when OpenGL is disabled.
Comment 8 Stefan_Lange_KA@T-Online.de 2018-03-22 15:38:20 UTC
Addition to  Comment 7:
Bug was also reproduced with

Version: 6.0.3.1 (x64)
Build-ID: 62abb169b0efa1520d7bee1f586865354060b989
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; 
Gebietsschema: de-DE (de_DE); Calc: CL

when OpenGL is used / not reproduced, when OpenGL is disabled (not used)
Comment 9 Timur 2018-04-19 08:08:46 UTC
*** Bug 116972 has been marked as a duplicate of this bug. ***
Comment 10 Timur 2018-04-19 08:09:58 UTC
*** Bug 116955 has been marked as a duplicate of this bug. ***
Comment 11 Regina Henschel 2018-04-20 21:03:54 UTC
*** Bug 117130 has been marked as a duplicate of this bug. ***
Comment 12 Regina Henschel 2018-04-20 21:06:02 UTC
The problem is not only with zoom, but with the layer and name of selected objects too. See test document and description in bug 117130.
Comment 13 Dieter 2018-04-24 08:53:36 UTC
*** Bug 117197 has been marked as a duplicate of this bug. ***
Comment 14 Dieter 2018-04-28 06:10:35 UTC
*** Bug 117306 has been marked as a duplicate of this bug. ***
Comment 15 Dieter 2018-05-07 09:11:45 UTC
*** Bug 116946 has been marked as a duplicate of this bug. ***
Comment 16 Mike Kaganski 2018-05-09 11:22:02 UTC
*** Bug 117520 has been marked as a duplicate of this bug. ***
Comment 17 Aron Budea 2018-05-10 15:53:59 UTC
*** Bug 117550 has been marked as a duplicate of this bug. ***
Comment 18 m.a.riosv 2018-05-11 09:17:49 UTC
*** Bug 117530 has been marked as a duplicate of this bug. ***
Comment 19 Jean-Baptiste Faure 2018-05-24 15:16:04 UTC
*** Bug 117765 has been marked as a duplicate of this bug. ***
Comment 20 Jon Grossart 2018-05-25 20:42:17 UTC
I've also run into this bug, and another effect is that if you copy and paste a number of pages into the document, the page counter in the status bar stays at 1 of 1 regardless of what page you are on.

It will update correctly if you save, close the document, and reopen it.
Comment 21 Mike Kaganski 2018-05-27 13:32:32 UTC
*** Bug 117832 has been marked as a duplicate of this bug. ***
Comment 22 Dieter 2018-05-27 15:28:09 UTC
*** Bug 117837 has been marked as a duplicate of this bug. ***
Comment 23 Mike Kaganski 2018-05-29 10:40:20 UTC
*** Bug 117874 has been marked as a duplicate of this bug. ***
Comment 24 Jean-Baptiste Faure 2018-06-01 18:35:57 UTC
*** Bug 117960 has been marked as a duplicate of this bug. ***
Comment 25 V Stuart Foote 2018-06-01 18:47:19 UTC
*** Bug 117956 has been marked as a duplicate of this bug. ***
Comment 26 Aron Budea 2018-06-06 22:46:54 UTC
*** Bug 118044 has been marked as a duplicate of this bug. ***
Comment 27 Jean-Baptiste Faure 2018-06-07 07:49:20 UTC
*** Bug 118046 has been marked as a duplicate of this bug. ***
Comment 28 Jean-Baptiste Faure 2018-06-10 11:16:13 UTC
*** Bug 118060 has been marked as a duplicate of this bug. ***
Comment 29 V Stuart Foote 2018-06-17 00:33:30 UTC
*** Bug 118201 has been marked as a duplicate of this bug. ***
Comment 30 Aron Budea 2018-06-20 03:06:42 UTC
*** Bug 118257 has been marked as a duplicate of this bug. ***
Comment 31 Commit Notification 2018-06-22 19:21:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ad7226aee21cc6dbb30d061d76491b01e39de66

tdf#116208 vcl opengl: fix lack of updates in status bar

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 32 Miklos Vajna 2018-06-22 20:42:30 UTC
Will backport to 6.1 and 6.0 a bit later.
Comment 33 Stefan_Lange_KA@T-Online.de 2018-06-23 05:43:54 UTC
I have tested with
Version: 6.2.0.0.alpha0+ (x64)
Build ID: 057c33b6609fe49efb6fa757db5f336acddb2a3d
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-06-22_22:52:46
Locale: de-DE (de_DE); Calc: CL

Zoom factor, sheet number, counter of selected cells etc. were updated properly and also in Writer zoom factor was correctly updated.
Comment 34 Jean-Baptiste Faure 2018-06-23 06:14:38 UTC
Verified fixed in 
Version: 6.2.0.0.alpha0+
Build ID: 32f556667cb09587bd636239da9d463d8c15679a
CPU threads: 4; OS: Linux 4.4; UI render: GL; VCL: gtk3; 
Ubuntu_16.04_x86-64
Locale: fr-FR (fr_FR.UTF-8); Calc: threaded

Thank you very much :-)

Best regards. JBF
Comment 35 Jean-Baptiste Faure 2018-06-24 11:34:07 UTC
*** Bug 118334 has been marked as a duplicate of this bug. ***
Comment 36 Commit Notification 2018-06-25 10:15:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd93dcc1f4bc7d7fb95c0cbd28157b67ea7a97f8&h=libreoffice-6-1

tdf#116208 vcl opengl: fix lack of updates in status bar

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 37 Commit Notification 2018-06-29 08:32:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bcfa971adb62bfdde14e8c328fb25e1d10acad9b&h=libreoffice-6-0

tdf#116208 vcl opengl: fix lack of updates in status bar

It will be available in 6.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 38 Stefan_Lange_KA@T-Online.de 2018-06-30 14:02:53 UTC
(In reply to Commit Notification from comment #37)
> Miklos Vajna committed a patch related to this issue.
> It has been pushed to "libreoffice-6-0":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=bcfa971adb62bfdde14e8c328fb25e1d10acad9b&h=libreoffice-6-0
> 
> tdf#116208 vcl opengl: fix lack of updates in status bar
> 
> It will be available in 6.0.6.
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Tested with
Version: 6.1.0.0.beta2+ (x64)
Build-ID: 67a56897ec1e4f2bab2c3291b8dd225710d2ae29
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; 
TinderBox: Win-x86_64@62-TDF, Branch:libreoffice-6-1, Time: 2018-06-29_13:19:46
Gebietsschema: de-DE (de_DE); Calc: CL

Test was OK
Comment 39 Stefan_Lange_KA@T-Online.de 2018-06-30 14:07:09 UTC
(In reply to Commit Notification from comment #37)
> Miklos Vajna committed a patch related to this issue.
> It has been pushed to "libreoffice-6-0":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=bcfa971adb62bfdde14e8c328fb25e1d10acad9b&h=libreoffice-6-0
> 
> tdf#116208 vcl opengl: fix lack of updates in status bar
> 
> It will be available in 6.0.6.
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Tested with
Version: 6.1.0.0.beta2+ (x64)
Build-ID: 67a56897ec1e4f2bab2c3291b8dd225710d2ae29
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; 
TinderBox: Win-x86_64@62-TDF, Branch:libreoffice-6-1, Time: 2018-06-29_13:19:46
Gebietsschema: de-DE (de_DE); Calc: CL

Test was OK(In reply to Stefan_Lange_KA@T-Online.de from comment #38)
> (In reply to Commit Notification from comment #37)
> > Miklos Vajna committed a patch related to this issue.
> > It has been pushed to "libreoffice-6-0":
> > 
> > http://cgit.freedesktop.org/libreoffice/core/commit/
> > ?id=bcfa971adb62bfdde14e8c328fb25e1d10acad9b&h=libreoffice-6-0
> > 
> > tdf#116208 vcl opengl: fix lack of updates in status bar
> > 
> > It will be available in 6.0.6.
> > 
> > The patch should be included in the daily builds available at
> > http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> > information about daily builds can be found at:
> > http://wiki.documentfoundation.org/Testing_Daily_Builds
> > 
> > Affected users are encouraged to test the fix and report feedback.
> 
> Tested with
> Version: 6.1.0.0.beta2+ (x64)
> Build-ID: 67a56897ec1e4f2bab2c3291b8dd225710d2ae29
> CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; 
> TinderBox: Win-x86_64@62-TDF, Branch:libreoffice-6-1, Time:
> 2018-06-29_13:19:46
> Gebietsschema: de-DE (de_DE); Calc: CL
> 
> Test was OK

Sorry! Comment 38 belongs is the reply to Comment 36 (LO 6.1)
Comment 40 Stefan_Lange_KA@T-Online.de 2018-06-30 15:27:28 UTC
(In reply to Commit Notification from comment #37)
> Miklos Vajna committed a patch related to this issue.
> It has been pushed to "libreoffice-6-0":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=bcfa971adb62bfdde14e8c328fb25e1d10acad9b&h=libreoffice-6-0
> 
> tdf#116208 vcl opengl: fix lack of updates in status bar
> 
> It will be available in 6.0.6.
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Test with 
Version: 6.0.6.0.0+ (x64)
Build ID: dd9232a6b2bcd32c7279e1476445214c6bb9e417
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-0, Time: 2018-06-30_06:57:28
Locale: de-DE (de_DE); Calc: CL
was OK too!
Comment 41 Aron Budea 2018-07-02 02:03:23 UTC
*** Bug 118497 has been marked as a duplicate of this bug. ***
Comment 42 V Stuart Foote 2018-07-05 23:01:30 UTC
*** Bug 118560 has been marked as a duplicate of this bug. ***
Comment 43 V Stuart Foote 2018-07-06 16:57:42 UTC Comment hidden (obsolete)
Comment 44 n33h11 2018-07-08 22:41:21 UTC
Problem still exists in Version: 6.0.5.2 (x64) version of the package. Static zoom without showing in the panel in the lower right corner.

Versão: 6.0.5.2 (x64)
ID de compilação: 54c8cbb85f300ac59db32fe8a675ff7683cd5a16
Threads da CPU:4; SO:Windows 10.0; Realizador da interface: GL; 
Local: pt-BR (pt_BR); Calc: CL
Comment 45 Aron Budea 2018-07-08 22:47:47 UTC
(In reply to n33h11 from comment #44)
> Problem still exists in Version: 6.0.5.2 (x64) version of the package.
> Static zoom without showing in the panel in the lower right corner.
Yes, the fix will arrive with version 6.0.6, or you can give 6.1.0.1 a try.