tdf#116208 vcl opengl: fix lack of updates in status bar

Commit f0821f9a347c7752a3c741c3451a2f1630173720 (Cache text layout of
statusbar items, 2017-06-08) was a performance improvement of not laying
out the text of status bar text during each & every paint. One of these
places didn't work correctly with Chinese text, so commit
a4ed3d9a1ffa1b51ba4352a955c950235f099fdc (tdf#115353 Status bar: no
cache in settext, 2018-03-01) attempted to disable the caching at that
particular place by removing the update of the cache.

This resulted in lack of updates, e.g. during typing into Writer and
checking the word count part of the status bar.

Fix this (and at the same time keep the original problem fixed) by still
not using the layout cache and that problematic place, but instead of
just not updating the cache actually invalidate it -- probably that was
the intention in the force place already.

(cherry picked from commit 0ad7226aee21cc6dbb30d061d76491b01e39de66)

Change-Id: Ib7b91e5f24bc68d2f8cae2efea64340585ad9bd5